[tool.poetry]
name = "govtlit"
version = "0.1.0"
description = ""
authors = ["Lena Fuhrimann <6780471+cloudlena@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.12"
langchain-openai = "^0.0.8"
chainlit = "^1.0.401"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
